sintactico_c2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PROTOCOLO
    SLASH

Grammar

Rule 0     S' -> comando
Rule 1     comando -> entrada
Rule 2     dominioweb -> PALABRA PUNTO PALABRA
Rule 3     entrada -> PALABRA ARROBA dominio
Rule 4     dominio -> ORGANIZACION TLD
Rule 5     entrada -> NAMECURP DATE SEXO ENTIDAD CONSONANTES NUMAS
Rule 6     entrada -> EMISOR NUMBANCO NUMCUENTA DIGSEG

Terminals, with rules where they appear

ARROBA               : 3
CONSONANTES          : 5
DATE                 : 5
DIGSEG               : 6
EMISOR               : 6
ENTIDAD              : 5
NAMECURP             : 5
NUMAS                : 5
NUMBANCO             : 6
NUMCUENTA            : 6
ORGANIZACION         : 4
PALABRA              : 2 2 3
PROTOCOLO            : 
PUNTO                : 2
SEXO                 : 5
SLASH                : 
TLD                  : 4
error                : 

Nonterminals, with rules where they appear

comando              : 0
dominio              : 3
dominioweb           : 
entrada              : 1

Parsing method: LALR

state 0

    (0) S' -> . comando
    (1) comando -> . entrada
    (3) entrada -> . PALABRA ARROBA dominio
    (5) entrada -> . NAMECURP DATE SEXO ENTIDAD CONSONANTES NUMAS
    (6) entrada -> . EMISOR NUMBANCO NUMCUENTA DIGSEG

    PALABRA         shift and go to state 3
    NAMECURP        shift and go to state 4
    EMISOR          shift and go to state 5

    comando                        shift and go to state 1
    entrada                        shift and go to state 2

state 1

    (0) S' -> comando .



state 2

    (1) comando -> entrada .

    $end            reduce using rule 1 (comando -> entrada .)


state 3

    (3) entrada -> PALABRA . ARROBA dominio

    ARROBA          shift and go to state 6


state 4

    (5) entrada -> NAMECURP . DATE SEXO ENTIDAD CONSONANTES NUMAS

    DATE            shift and go to state 7


state 5

    (6) entrada -> EMISOR . NUMBANCO NUMCUENTA DIGSEG

    NUMBANCO        shift and go to state 8


state 6

    (3) entrada -> PALABRA ARROBA . dominio
    (4) dominio -> . ORGANIZACION TLD

    ORGANIZACION    shift and go to state 10

    dominio                        shift and go to state 9

state 7

    (5) entrada -> NAMECURP DATE . SEXO ENTIDAD CONSONANTES NUMAS

    SEXO            shift and go to state 11


state 8

    (6) entrada -> EMISOR NUMBANCO . NUMCUENTA DIGSEG

    NUMCUENTA       shift and go to state 12


state 9

    (3) entrada -> PALABRA ARROBA dominio .

    $end            reduce using rule 3 (entrada -> PALABRA ARROBA dominio .)


state 10

    (4) dominio -> ORGANIZACION . TLD

    TLD             shift and go to state 13


state 11

    (5) entrada -> NAMECURP DATE SEXO . ENTIDAD CONSONANTES NUMAS

    ENTIDAD         shift and go to state 14


state 12

    (6) entrada -> EMISOR NUMBANCO NUMCUENTA . DIGSEG

    DIGSEG          shift and go to state 15


state 13

    (4) dominio -> ORGANIZACION TLD .

    $end            reduce using rule 4 (dominio -> ORGANIZACION TLD .)


state 14

    (5) entrada -> NAMECURP DATE SEXO ENTIDAD . CONSONANTES NUMAS

    CONSONANTES     shift and go to state 16


state 15

    (6) entrada -> EMISOR NUMBANCO NUMCUENTA DIGSEG .

    $end            reduce using rule 6 (entrada -> EMISOR NUMBANCO NUMCUENTA DIGSEG .)


state 16

    (5) entrada -> NAMECURP DATE SEXO ENTIDAD CONSONANTES . NUMAS

    NUMAS           shift and go to state 17


state 17

    (5) entrada -> NAMECURP DATE SEXO ENTIDAD CONSONANTES NUMAS .

    $end            reduce using rule 5 (entrada -> NAMECURP DATE SEXO ENTIDAD CONSONANTES NUMAS .)

